# aws-daily-standup-summary

./: PLAN.md  pyproject.toml  requirements.txt
app/: __init__.py
app/adapters/: jira_query_service.py
app/adapters/tests/: test_jira_query_service.py
app/domain/model/: task.py
app/domain/ports/: tasks_query_service.py
app/entrypoints/: __init__.py  lambda_handler.py
app/entrypoints/tests/: test_lambda_handler.py
infra/: template.yaml
scripts/: deploy.sh
